conclusion and outlook

--- a/biblio.bib
+++ b/biblio.bib
@@ -25,7 +25,7 @@
 	collaboration = {Wikipedia, the free encyclopedia},
 	year = {2019},
 	url  = {https://en.wikipedia.org/wiki/File:Standard_Model_of_Elementary_Particles.svg},
-	 howpublished = {\url{https://en.wikipedia.org/wiki/Standard_Model}},
+	howpublished = {\url{https://en.wikipedia.org/wiki/Standard_Model}},
    note = "[Online; accessed 05-November-2022]"
 	
 }
@@ -684,7 +684,7 @@ URL= {https://indico.cern.ch/event/753431/contributions/3120677/attachments/1708
 @article{JetCalibration_Run2,
 	url = {https://doi.org/10.1140/epjc/s10052-021-09402-3},
 	author = {{ ATLAS Collaboration.}},
-	title={{ Jet energy scale and resolution measured in proton–proton collisions at 𝑠√=13 TeV with the ATLAS detector.}},
+	title={{ Jet energy scale and resolution measured in proton–proton collisions at $\sqrt{s}=13$ with the ATLAS detector.}},
 	journal = {The European Physical Journal C},
 	volume = {81},
 	number = {689},
@@ -719,7 +719,6 @@ URL= {https://indico.cern.ch/event/753431/contributions/3120677/attachments/1708
       address       = "Geneva",
       year          = "1984",
       url           = "https://cds.cern.ch/record/102083",
-      note          = "Copies shelved as reports in LEP, PS and SPS libraries",
 }
 
 @unpublished{LHCGuide,
@@ -876,9 +875,7 @@ URL= {https://indico.cern.ch/event/753431/contributions/3120677/attachments/1708
       reportNumber  = "ATL-SOFT-PUB-2007-003, ATL-COM-SOFT-2007-008",
       address       = "Geneva",
       year          = "2007",
-      url           = "https://cds.cern.ch/record/1038095",
-      note          = "All figures including auxiliary figures are available at
-                       https://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/PUBNOTES/ATL-SOFT-PUB-2007-003",
+      url           = "https://cds.cern.ch/record/1038095"
 }
 @article{ElectronReco,
 	doi = {10.1140/epjc/s10052-019-7140-6},
@@ -1083,4 +1080,63 @@ author = {{A. Salam and J.C. Ward}}
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.19.1264},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.19.1264}
+}
+@misc{Run3,
+  author        = {{ ATLAS Collaboration}},
+  title         = {{ATLAS Experiment records “first physics” at new high-energy frontier}},
+  howpublished  = "CERN",
+  month         = "Jul. 5,", 
+  year          = "2022 [Online]",
+  url           = "https://atlas.cern/Updates/Press-Statement/Run3-first-collisions"
+}
+
+@article{EWK_WWW,
+	doi = {10.1103/physrevlett.129.061803},
+	url = {https://doi.org/10.1103%2Fphysrevlett.129.061803},
+	year = 2022,
+	month = {aug},
+	publisher = {American Physical Society ({APS})},
+	volume = {129},
+	number = {6},
+	author = {{ATLAS Collaboration}},
+	title = {{Observation of WWW Production in pp Collisions at $\sqrt{s}=13$ TeV with the ATLAS Detector}},
+	journal = {Physical Review Letters}
+}
+
+@article{EWk_ssWW,
+	doi = {10.1103/physrevlett.123.161801},
+	url = {https://doi.org/10.1103%2Fphysrevlett.123.161801},
+	year = 2019,
+	month = {oct},
+	publisher = {American Physical Society ({APS})},
+	volume = {123},
+	number = {16},
+	author = {{ATLAS Collaboration}},
+      title = {{Observation of electroweak production of a same-sign W boson pair in association with two jets in pp collisions at $\sqrt{s}=13$ TeV with the ATLAS detector}},
+      journal = {Physical Review Letters}
+}
+@article{EWK_WZ,
+	doi = {10.1016/j.physletb.2019.05.012},
+	url = {https://doi.org/10.1016%2Fj.physletb.2019.05.012},
+	year = 2019,
+	month = {jun},
+	publisher = {Elsevier {BV}},
+	volume = {793},
+	pages = {469--492},
+	author = {{ATLAS Collaboration}},
+      title = {{Observation of electroweak $W^{\pm}Z$ boson pair production in association with two jets in pp collisions at $\sqrt{s}=13$ TeV with the ATLAS detector}},
+      journal = {Physics Letters B}
+}
+
+@techreport{ssWW_HLLHCProspects,
+      collaboration = "ATLAS",
+      title         = {{Prospects for the measurement of the $W^{\pm}W^{\pm}$
+                       scattering cross section and extraction of the longitudinal
+                       scattering component in $pp$ collisions at the
+                       High-Luminosity LHC with the ATLAS experiment}},
+      institution   = "CERN",
+      reportNumber  = "ATL-PHYS-PUB-2018-052",
+      address       = "Geneva",
+      year          = "2018",
+      url           = "https://cds.cern.ch/record/2652447",
 }
