--- a/thesis.tex
+++ b/thesis.tex
@@ -165,8 +165,12 @@ This thesis presents the cross-section measurements of two Z bosons production i
 \bibliographystyle{unsrt}
 \clearpage
 }
+
+\addcontentsline{toc}{part}{Appendices}
 \begin{appendices}
-    \part*{Appendices}
+    \part*{\LARGE{Appendices}}
+	Supplementary materials to the main body of this thesis are presented in the following appendices. Appendix \ref{Appendix:Contribution} summarizes my contributions to the measurement presented in this thesis and to the ATLAS experiment. The largest source of systematic uncertainty on the results is the unfolding bias; thus, Appendix \ref{Appendix:Unfolding_bias} summarizes the studies conducted to understand the source of this bias. Finally, Appendix \ref{Appendix:VBSSupRegion} presents the differential unfolded cross-sections measured in the VBS-suppressed region of the phase space. 
+
 	\include{sections/Appendix}
 \end{appendices}
 
