--- a/sections/Results.tex
+++ b/sections/Results.tex
@@ -1,10 +1,8 @@
 \part {\LARGE{Results}}
 \label{sec:Results}
 
-\section{ Differential Cross-sections }
-\label{sec:DifferentialxS}
-\input{sections/Results_DifferentialCrossSections}
+This chapter presents the main results of this thesis. Section \ref{sec:DetectorLevel_Measurement} presents the detector level measurements of the eleven kinematic observables introduced in \ref{sec:Obs}, whereas Section \ref{sec:DifferentialxS} presents the unfolded differential cross-sections. Section \ref{sec:EFT} reinterprets the unfolded cross-sections shown in Section \ref{sec:DifferentialxS} to constrain parameters of physics beyond the SM affecting the quartic gauge vertices of $ZZjj$ production. 
 
-\section{Effective Field Theory ReInterpretation}
-\label{sec:EFT}
+\input{sections/Results_DetectorLevelMeasurements}
+\input{sections/Results_DifferentialCrossSections}
 \input{sections/Results_ReInterpretation}
