--- a/sections/Analysis_Systematics.tex
+++ b/sections/Analysis_Systematics.tex
@@ -6,26 +6,14 @@ The differential cross-section measurements discussed in this thesis are affecte
 The following sources of theoretical uncertainties are considered in the measurement.
 
 \begin{itemize}
-\item{\textbf{Uncertainties on QCD Scale:} As discussed in Section \ref{sec:Pheno}, the theoretical predictions of cross-sections depend on the factorization scale ($\mu_{F}$) and renormalization scale ($\mu_{R}$) \cite{QCDScaleAndPDFUnc}. To account for this dependence, a QCD scale uncertainty is evaluated by scaling $\mu_{F}$ and $\mu_{R}$ independently using on-the-fly variations provided by the MC generators. The variations constitute of six-point variations of $\mu_{F}$ and $\mu_{R}$ from $-50\%$ or $+100\%$ around their nominal values of 1, such that \{$\mu_R = 0.5, \mu_F = 0.5$\}, \{$\mu_R = 0.5, \mu_F = 1.0$\}, \{$\mu_R = 1.0, \mu_F = 0.5$\}, \{$\mu_R = 1.0, \mu_F = 2.0$\}, \{$\mu_R = 2.0, \mu_F = 1.0$\}, and \{$\mu_R = 2.0, \mu_F = 2.0$\}. The final uncertainty is evaluated as the absolute envelope of the six variations. The QCD scale uncertainties are evaluated for $qqZZ$, $ggZZ$, and $EWK qqZZjj$ samples. \textcolor{red}{to add intermediate systematics plot} %Figure \ref{fig:QCDScale} shows different variations and the final envelope for QCD Scale uncertainties in the VBS Enhanced region as a function of $m_{jj}$. 
-
-% \begin{figure}
-%     \centering
-%     \includegraphics[width=.8\linewidth]{figures/AnalysisOverview/mu_ProfileRun2.pdf}
-%     \caption{ Evaluation of the fiducial level QCD factorization and renormalization scale uncertainties band for $qqZZ$ sample. \label{fig:QCDScale}}
-% \end{figure}
+\item{\textbf{Uncertainties on QCD Scale:} As discussed in Section \ref{sec:Pheno}, the theoretical predictions of cross-sections depend on the factorization scale ($\mu_{F}$) and renormalization scale ($\mu_{R}$) \cite{QCDScaleAndPDFUnc}. To account for this dependence, a QCD scale uncertainty is evaluated by scaling $\mu_{F}$ and $\mu_{R}$ independently using on-the-fly variations provided by the MC generators. The variations constitute of six-point variations of $\mu_{F}$ and $\mu_{R}$ from $-50\%$ or $+100\%$ around their nominal values of 1, such that \{$\mu_R = 0.5, \mu_F = 0.5$\}, \{$\mu_R = 0.5, \mu_F = 1.0$\}, \{$\mu_R = 1.0, \mu_F = 0.5$\}, \{$\mu_R = 1.0, \mu_F = 2.0$\}, \{$\mu_R = 2.0, \mu_F = 1.0$\}, and \{$\mu_R = 2.0, \mu_F = 2.0$\}. The final uncertainty is evaluated as the absolute envelope of the six variations. The QCD scale uncertainties are evaluated for $qqZZ$, $ggZZ$, and $EWK qqZZjj$ samples.
 }
-\item{\textbf{Uncertainties on PDF $\&$ $\alpha_{S}$:} The cross-sections also depend on the choice of the PDF used by the MC generators. Thus, the PDF uncertainty for Sherpa and \textsc{MadGraph5} samples that use NNPDF3.0NNLO is evaluated using the prescription described in Ref \cite{PDFForRunII} using on-the-fly variation weights. The PDF variations include a set of 100 internal variations, two additional variations from the nominal PDF reweighted to the alternative MMHT2014nnlo \cite{MMHT2014PDFs} $\&$ CT14nnlo \cite{CT14nnlo} PDF sets and variations of the strong coupling constant by $\pm0.0001$ where the nominal value of $\alpha_{S}$ is $0.118$. The total uncertainty is taken as the absolute envelope of all standard deviations of $100$ internal variations, the two alternate PDF variations, added in quadrature with the envelope of the $\alpha_{S}$ variations, 
+\item{\textbf{Uncertainties on PDF $\&$ $\alpha_{S}$:} The cross-sections also depend on the choice of the PDF used by the MC generators. Thus, the PDF uncertainty for Sherpa and \textsc{MadGraph5} samples that use NNPDF3.0NNLO is evaluated using the prescription described in Ref \cite{PDFForRunII} using on-the-fly variation weights. The PDF variations include a set of 100 internal variations, two additional variations from the nominal PDF reweighted to the alternative MMHT2014nnlo \cite{MMHT2014PDFs} $\&$ CT14nnlo \cite{CT14nnlo} PDF sets, and variations of the strong coupling constant by $\pm0.0001$ where the nominal value of $\alpha_{S}$ is $0.118$. The total uncertainty is taken as the absolute envelope of all standard deviations of $100$ internal variations, the two alternate PDF variations, added in quadrature with the envelope of the $\alpha_{S}$ variations, 
 \begin{equation}
     \sigma_{PDF}^{NNPDF3.0NNLO} = \sqrt{ [ max (\sigma_{std.~dev.~int.}, |\sigma_{MMHT2014nnlo}| , |\sigma_{CT14nnlo}|~)]^2 + \sigma_{\alpha_S}^2 }
 \end{equation}
 
-The PDF uncertainty is evaluated for $qqZZ$, $ggZZ$ and \textsc{MadGraph5} $EWK qqZZjj$ samples. \textcolor{red}{to add intermediate systematics plot}  %Figure \ref{fig:PDFScale} shows different variations and the final envelope for QCD Scale uncertainties in the VBS Enhanced region as a function of $m_{jj}$. 
-
-% \begin{figure}
-%     \centering
-%     \includegraphics[width=.8\linewidth]{figures/AnalysisOverview/mu_ProfileRun2.pdf}
-%     \caption{ Evaluation of the fiducial level QCD factorization and renormalization scale uncertainties band for $qqZZ$ sample. \label{fig:PDFScale}}
-% \end{figure}
+The PDF uncertainty is evaluated for $qqZZ$, $ggZZ$ and \textsc{MadGraph5} $EWK qqZZjj$ samples.
 
 The electroweak $EWK~qqZZjj$ samples generated by \textsc{POWHEG-V2} do not have on-the-fly variations to evaluate the PDF uncertainty. Therefore, PDF uncertainty from the \textsc{MadGraph5} sample is taken as the PDF uncertainty for \textsc{POWHEG-V2} $EWK~qqZZjj$ samples.
 }
@@ -86,35 +74,35 @@ The experimental uncertainties affect all detector-level MC predictions and the 
 The following two uncertainties are intrinsic to the unfolding process itself and are included in the uncertainties for the unfolded differential cross-sections.
 
 \begin{itemize}
-    \item{\textbf{Unfolding Bias:} The inherent unfolding bias can be estimated either using the data-driven method discussed in Section \ref{subsec:Bias}, or using an MC-toy-based method. It is the most significant source of systematic uncertainty for the measurement. Both methods yield similar results. However, the MC-toy-based method is free from the influence of statistical fluctuation in data and thus is chosen to assign the systematic uncertainty on the intrinsic unfolding bias. 
+    \item{\textbf{Unfolding Bias:} The inherent unfolding bias can be estimated either using the data-driven method discussed in Section \ref{subsec:Bias} or using an MC-toy-based method. It is the most significant source of systematic uncertainty for the measurement. Both methods yield similar results. However, the MC-toy-based method is free from the influence of statistical fluctuation in data and thus is chosen to assign the systematic uncertainty on the intrinsic unfolding bias. 
 
     First, ten thousand toys are constructed from the truth level MC distribution, independently fluctuating each bin of the truth distribution with a random number extracted from a Gaussian with mean zero and variance of $N_{truth}^{bin}$. A pseudo detector level dataset is created by \textit{folding} using the nominal response from MC. Folding is a technique to create a detector level distribution from the MC by applying the detector's limited acceptance and inefficiencies, adding detector resolution-induced bin migration between the truth and detector level distributions, and including the contribution of the fiducial fakes. The pseudo dataset is then unfolded using the nominal unfolding inputs and plotted as the average bias of the toys as a function of the toy's truth-level yield. The final unfolding bias is the value where this distribution intersects with the $68.3\%$ confidence interval of the toys' true value. Figure \ref{fig:UnfoldingBias_mjj_VBSEnhanced} shows the unfolding bias evaluated in each bin of $m_{jj}$ in the VBS Enhanced region, estimated using the MC-toy-based approach. The unfolding bias ranges from $8-15\%$ in different bins, similar to what was observed using the data-driven method. 
-
+699
     \begin{figure}[htb]
         \centering
         \begin{subfigure}{.48\textwidth}
             \centering
-            \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/unfolding_bias_mjj_VBSEnh_bin1.pdf}
+            \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/unfoldingbias/unfolding_bias_mjj_VBSEnh_bin1.pdf}
             \caption{ bin 1}
         \end{subfigure}
         \begin{subfigure}{.48\textwidth}
             \centering
-            \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/unfolding_bias_mjj_VBSEnh_bin2.pdf}
+            \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/unfoldingbias/unfolding_bias_mjj_VBSEnh_bin2.pdf}
             \caption{bin 2 }
         \end{subfigure}\\
         \begin{subfigure}{.48\textwidth}
             \centering
-            \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/unfolding_bias_mjj_VBSEnh_bin3.pdf}
+            \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/unfoldingbias/unfolding_bias_mjj_VBSEnh_bin3.pdf}
             \caption{ bin 3 }
         \end{subfigure}
         \begin{subfigure}{.48\textwidth}
             \centering
-            \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/unfolding_bias_mjj_VBSEnh_bin4.pdf}
+            \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/unfoldingbias/unfolding_bias_mjj_VBSEnh_bin4.pdf}
             \caption{bin 4 }
         \end{subfigure}
         \begin{subfigure}{.48\textwidth}
             \centering
-            \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/unfolding_bias_mjj_VBSEnh_bin5.pdf}
+            \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/unfoldingbias/unfolding_bias_mjj_VBSEnh_bin5.pdf}
             \caption{bin 5 }
         \end{subfigure}
         \caption{ MC-based unfolding bias in each bin of $m_{jj}$ in the VBS-Enhanced region using Gaussian toys. The distribution shows the relative difference between unfolded and true values for toys as a function of the true value in each bin. The number of unfolding iterations is varied, and the final bias is chosen as the one-sigma intersection with the average value of the toy truth distribution (light-green region intersecting with the black curve). \label{fig:UnfoldingBias_mjj_VBSEnhanced}}
@@ -138,34 +126,13 @@ The following two uncertainties are intrinsic to the unfolding process itself an
 \label{subsec:BkgUnc}
 There are additional sources of uncertainties from the data-driven estimate of the fake background. The statistical and systematic uncertainties on the fake efficiency discussed in Section \ref{subsubsec:FakeEff}, estimated in the combined control region, are propagated to the final unfolded cross-section yield. First, the variation-applied fake background is calculated and subtracted from the nominal detector-level prediction for each variation. The subtracted altered distribution is then unfolded with nominal unfolding inputs. The difference between the altered-unfolded distribution and the nominal-unfolded distribution gives the impact of the background uncertainties on the unfolded cross-section measurements.
 
-\subsection{Breakdown of the Systematic Uncertainties }
-\label{subsec:SysUncBreakdown}
-Tables \ref{tab:systematics_mjj_VBS_Suppressed} and \ref{tab:systematics_mjj_VBS_Enhanced} show the impact of systematic uncertainties in VBS-Suppressed and VBS-Enhanced region respectively for each bin of $m_{jj}$. In both regions and most bins, the unfolding bias is the dominant source of systematic uncertainty, followed by the jet systematics. Figure \ref{fig:systematics_mjj} shows the same systematic uncertainties schematically. Figure \ref{fig:jet_systematics_mjj} shows the impact of different categories of the jet systematic uncertainties. In most bins of $m_{jj}$, the dominant jet uncertainties are from the pile-up energy correction step in the jet calibration. The uncertainties from jet eta-dependent calibration and jet energy resolution are also significant. Overall, the jet reconstruction uncertainties have about $8-9\%$ effect on each bin of the unfolded cross-sections.
+\subsection{Statistical Uncertainties}
+\label{subsubsec:StatUnc}
+The statistical uncertainty from the reconstructed data needs to be propagated to the estimated unfolded yield. Equation \ref{eqn:BayesianUnfolding} gives the unfolded yield for a target bin i with a single iteration. As the background subtracted detector yields are filled event by event, the reconstruction distribution is uncorrelated. However, as shown by the equation, an unfolded yield in one single bin depends on all detector-level bins due to the resolution effects via bin migration. Therefore, the statistical uncertainty on the unfolded yield is a combination of the uncertainties in detector-level bins and uncertainties on the migration probabilities, which takes the covariance between the detector-level bins into account. The statistical uncertainties at the unfolded level are evaluated by the \textit{RooUnfold} package, which propagates both of these uncertainties.
 
-\begin{table}
-\centering
-\begin{tabular}{|l || c | c | c | }
-\hline 
-Bin $m_{jj}$ [GeV] & [300, 410) & [410, 600) & [600, 1780)\\
-\hline 
-QCD MC modelling & 1.4 & 0.3 & \textbf{6.6 }\\
-Jet & \textbf{7.8} & \textbf{6.6} & \textbf{6.3 }\\
-Trigger & 0.32 & 0.07 & 0.081 \\
-Leptons & 1.8 & 1.2 & 1.2 \\
-PRW & 0.39 & 0.062 & 0.21\\
-Theory ($qqZZ$) & 2 & 2.4 & 2.1 \\
-Theory (EWK $qqZZjj$) & 0.017 & 0.01 & 0.037 \\
-Theory ($ggZZ$) & 0.3 & 0.51 & 0.64 \\
-MC Bkg. (ttV+VVV) & 1.6 & 1.7 & 1.6 \\
-Fake Bkg. (stat + syst) & 3 & 2.3 & 1.8 \\
-Luminosity & 1.7 & 1.7 & 1.7 \\
-Unfolding Bias & \textbf{12} & \textbf{6.3} & \textbf{7.1}\\
-\hline
-Total & 15 & 10 & 12 \\
-\hline
-\end{tabular}
-\caption{Breakdown of the relative systematic uncertainties ($\%$) for each bin of $\mjj$ in the VBS-Suppressed region. \label{tab:systematics_mjj_VBS_Suppressed}}
-\end{table}
+\subsection{Breakdown of Uncertainties }
+\label{subsec:SysUncBreakdown}
+Table \ref{tab:systematics_mjj_VBS_Enhanced} shows the impact of systematic uncertainties in the VBS-Enhanced region for each bin of $m_{jj}$. In most bins, the unfolding bias is the dominant source of systematic uncertainty, followed by the jet systematics. 
 
 \begin{table}
 \centering
@@ -173,39 +140,38 @@ Total & 15 & 10 & 12 \\
 \hline \hline
 Bin $m_{jj}$ [GeV] & [300, 400) & [400, 530) & [530, 720) & [720, 1080) & [1080, 3280)\\
 \hline
-QCD MC modelling & 2.6 & 0.27 & 0.39 & 1.3 & 3.6\\
-Jet & \textbf{7.4} & \textbf{7.6} & \textbf{8.9} & \textbf{8.5} & \textbf{8.9}\\
-Trigger & 0.061 & 0.078 & 0.083 & 0.053 & 0.049\\
-Leptons & 1.1 & 1.1 & 1.1 & 1.1 & 1.1\\
-PRW & 0.38 & 0.58 & 0.79 & 0.83 & 0.59\\
-Theory ($qqZZ$) & 2.7 & 2.3 & 2.6 & 1.9 & 0.85\\
-Theory (EWK $qqZZjj$) & 0.074 & 0.054 & 0.065 & 0.15 & 0.89\\
-Theory ($ggZZ$) & 0.48 & 0.3 & 0.34 & 0.36 & 1.1\\
+QCD MC modelling & 2.91 & 0.05 & 0.77 & 0.56 & 4.21 \\
+Jet & \textbf{7.5} & \textbf{7.6} & \textbf{9.1} & \textbf{9.1} & \textbf{9.0}\\
+Trigger & 0.13 & 0.14 & 0.13 & 0.45 & 0.53\\
+Leptons & 1.7 & 1.7 & 1.6 & 2.4 & 2.6 \\
+PRW & 0.38 & 0.58 & 0.83 & 0.88 & 0.62\\
+Theory ($qqZZ$) & 2.7 & 2.3 & 2.6 & 2.0 & 0.74\\
+Theory (EWK $qqZZjj$) & 0.08 & 0.05 & 0.07 & 0.14 & 0.96\\
+Theory ($ggZZ$) & 0.19 & 0.10 & 0.13 & 0.13 & 0.51\\
 MC Bkg. (ttV+VVV) & 2.7 & 2.6 & 2.4 & 1.8 & 1.2\\
-Fake Bkg. (stat + syst) & 2.4 & 2.5 & 2.5 & 1.7 & 1.5\\
-Luminosity & 1.7 & 1.7 & 1.7 & 1.7 & 1.7\\
-Unfolding Bias & \textbf{10.05} & \textbf{10.1} & \textbf{10.15} & \textbf{9.5} & \textbf{5.9}\\
+Fake Bkg. (stat + syst) & 3.3 & 3.1 & 2.1 & 2.7 & 2.8\\
+Luminosity & 1.3 & 1.3 & 1.3 & 1.4 & 1.4\\
+Unfolding Bias & \textbf{10.1} & \textbf{10.7} & \textbf{11.0} & \textbf{9.6} & \textbf{5.9}\\
 \hline
-Total & 11.1 & 10.9 & 11.1 & 9.4 & 10\\
+Total & 14.0 & 14.2 & 15.1 & 14.1 & 12.4\\
 \hline
 \end{tabular}
 \caption{Breakdown of the relative systematic uncertainties ($\%$) for each bin of $\mjj$ in the VBS-Enhanced region. \label{tab:systematics_mjj_VBS_Enhanced}}
 \end{table}
 
-\begin{figure}[!htb]
-\centering
-\includegraphics[width=.49\linewidth]{figures/Analysis/Systematics/systematics_VBS_Suppressed.pdf}
-\includegraphics[width=.49\linewidth]{figures/Analysis/Systematics/systematics_VBS_Enhanced.pdf}
-\caption{Systematic uncertainties as a function of $\mjj$ in the VBS-Suppressed region (left) and the VBS-Enhanced region (right). \textcolor{red}{update with ATLAS labels and data-driven closure test}}  \label{fig:systematics_mjj}
-\end{figure}
+Figure \ref{fig:sys_mjj_VBS_Enhanced_total} schematically shows different types of uncertainties affecting the measurements in the VBS-Enhanced region as a function of $m_{jj}$. The solid black line represents the total statistical uncertainty and has the most significant impact in all bins. Total systematic uncertainty, represented by the dashed black line, combines all systematic uncertainties. Depending on the bin, it is dominated either by unfolding bias or jet-related uncertainties. Figure \ref{fig:sys_mjj_VBS_Enhanced_jet} shows the impact of different categories of the jet systematic uncertainties. In most bins of $m_{jj}$, the dominant jet uncertainties are from the pile-up energy correction step in the jet calibration. The uncertainties from jet eta-dependent calibration and jet energy resolution are also significant. Overall, the jet reconstruction uncertainties have about $8-9\%$ effect on each bin of the unfolded cross-sections.
 
 \begin{figure}[!htb]
-\centering
-\includegraphics[width=.49\linewidth]{figures/Analysis/Systematics/jet_systematics_VBS_Suppressed.pdf}
-\includegraphics[width=.49\linewidth]{figures/Analysis/Systematics/jet_systematics_VBS_Enhanced.pdf}
-\caption{Impact of different jet systematic uncertainties on the unfolded distribution of $\mjj$ in the VBS-Suppressed region (left) and the VBS-Enhanced region (right). \textcolor{red}{update with ATLAS labels and add data-driven closure test}  \label{fig:jet_systematics_mjj}}
-\end{figure}
-
-\subsection{Statistical Uncertainties}
-\label{subsubsec:StatUnc}
-The statistical uncertainty from the reconstructed data needs to be propagated to the estimated unfolded yield. Equation \ref{eqn:BayesianUnfolding} gives the unfolded yield for a target bin i with a single iteration. As the background subtracted detector yields are filled event by event, the reconstruction distribution is uncorrelated. However, as shown by the equation, an unfolded yield in one single bin depends on all detector-level bins due to the resolution effects via bin migration. Therefore, the statistical uncertainty on the unfolded yield is a combination of the uncertainties in detector-level bins and uncertainties on the migration probabilities, which takes the covariance between the detector-level bins into account. The statistical uncertainties at the unfolded level are evaluated by the \textit{RooUnfold} package, which propagates both of these uncertainties.
+    \centering
+    \begin{subfigure}{.48\textwidth}
+        \centering
+        \includegraphics[width=.98\linewidth]{figures/Analysis/Systematics/systematics_VBS_Enhanced.pdf}
+        \caption{ Statistical and systematic uncertainties affecting the differential cross-section measurements. \label{fig:sys_mjj_VBS_Enhanced_total}}
+    \end{subfigure}
+    \begin{subfigure}{.48\textwidth}
+        \centering
+        \includegraphics[width=.98\linewidth]{figures/Analysis/Systematics/jet_systematics_VBS_Enhanced.pdf}
+        \caption{Breakdown of the total jet-related uncertainties. \label{fig:sys_mjj_VBS_Enhanced_jet} }
+    \end{subfigure}
+    \caption{Uncertainties as a function of $\mjj$ in the VBS-Enhanced region. \label{fig:sys_mjj_VBS_Enhanced}}
+    \end{figure}
